src/components/page-sidebar/sidebar-panel.scss
@import "../vars.scss";

.sidebar-panel {
  background-color: white;
  width: 500px;

  .sidebar-header {
    background-color: $cc-orange-light1;
    display: flex;
    align-items: center;
    height: 40px;

    .sidebar-title{
      margin: 0;
      color: white;
      font-size: pxToRem(20);
      font-weight: normal;
      width: 100%;
      text-align: center;
    }

    .icon {
      fill: white;
      width: 24px;
      height: 18px;
      margin-right: 9px;
      border-radius: 5px;
      cursor: pointer;

      &:hover {
        background-color: $cc-orange-light4;
        fill: $cc-orange-light2;
      }
      &:active {
        background-color: $cc-orange-light2;
        fill: $cc-orange;
      }
    }
  }

  .sidebar-content {
    line-height: 1.575;
    margin-top: 0;
    margin-bottom: 11pt;
    text-align: left;
    padding: 25px;
    max-height: 649px;
    overflow: auto;
    min-height: 100px;

    iframe {
      border: 0;
    }
    img {
      height: auto;
      max-width: 100%;
    }
  }

  &.visible {
    visibility: visible;
  }
  &.hidden {
    visibility: hidden;
  }
}

